--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1 class="title-t3">2023년 신년계획</h1>
     <p class="message-t2">2023년에는 좋은 날만 잊자</p>
     <div class="row flex-row wrap">
-      <div class="bucket img1-t3 center">나만의 프로젝트 만들기</div>
+      <div class="bucket img1-t3 center done">나만의 프로젝트 만들기</div>
       <div class="bucket img2-t2 center">돈많이 벌기</div>
       <div class="bucket img2-t5 center">외국어1개습득하기</div>
       <div class="bucket img1-t4 center">1년에 책10권 읽기</div>
